--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
   "name": "lemberg/laravel-query-log",
   "description": "A query log",
-  "license": "MIT",
+  "license": "Apache-2.0",
+  "homepage": "https://github.com/lemberg/laravel-query-logs",
   "keywords": [
     "query",
     "log"
   ],
-  "type": "library",
   "authors": [
     {
       "name": "Nazar Saikevych",
@@ -14,7 +14,9 @@
     }
   ],
   "require": {
-    "php": ">=7.0"
+    "php": ">=7.0.0",
+    "laravel/framework": "5.4.*|5.5.*",
+    "laravel/tinker": "~1.0"
   },
   "autoload": {
     "psr-4": {
