--- a/composer.json
+++ b/composer.json
@@ -1,38 +1,35 @@
 {
-  "name": "lemberg/laravel-query-log",
-  "description": "A query log",
-  "license": "Apache-2.0",
-  "homepage": "https://github.com/lemberg/laravel-query-logs",
-  "keywords": [
-    "query",
-    "log"
-  ],
-  "authors": [
-    {
-      "name": "Nazar Saikevych",
-      "email": "nazar.saikevych@lemberg.co.ua"
+    "name": "lemberg/laravel-query-log",
+    "description": "A query log",
+    "license": "Apache-2.0",
+    "homepage": "https://github.com/lemberg/laravel-query-logs",
+    "keywords": ["query", "log"],
+    "authors": [
+        {
+            "name": "Nazar Saikevych",
+            "email": "nazar.saikevych@lemberg.co.ua"
+        }
+    ],
+    "require": {
+        "php": ">=7.0.0",
+        "laravel/framework": "5.4.*|5.5.*",
+        "laravel/tinker": "~1.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Lemberg\\LaravelQueryLog\\": "src"
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Lemberg\\LaravelQueryLog\\ServiceProvider"
+            ]
+        }
+    },
+    "config": {
+        "preferred-install": "dist",
+        "sort-packages": true,
+        "optimize-autoloader": true
     }
-  ],
-  "require": {
-    "php": ">=7.0.0",
-    "laravel/framework": "5.4.*|5.5.*",
-    "laravel/tinker": "~1.0"
-  },
-  "autoload": {
-    "psr-4": {
-      "Lemberg\\LaravelQueryLog\\": "src"
-    }
-  },
-  "extra": {
-    "laravel": {
-      "providers": [
-        "Lemberg\\LaravelQueryLog\\ServiceProvider"
-      ]
-    }
-  },
-  "config": {
-    "preferred-install": "dist",
-    "sort-packages": true,
-    "optimize-autoloader": true
-  }
 }
