--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=7.0.0",
-        "laravel/framework": "5.4.*|5.5.*",
+        "laravel/framework": "5.4.*|5.5.*|5.6.*",
         "laravel/tinker": "~1.0"
     },
     "autoload": {
