--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,15 @@
         {
             "name": "Nazar Saikevych",
             "email": "nazar.saikevych@lemberg.co.ua"
+        },
+        {
+            "name": "Bohdan Khrupa",
+            "email": "bohdan.khrupa@lemberg.co.uk"
         }
     ],
     "require": {
-        "php": ">=7.0.0",
-        "laravel/framework": "5.4.*|5.5.*|5.6.*",
-        "laravel/tinker": "~1.0"
+        "php": ">=7.2.5",
+        "laravel/framework": "6.*.*"
     },
     "autoload": {
         "psr-4": {
